[tool.poetry]
name = "test-freelance"
version = "0.1.0"
description = ""
authors = ["polenom <vitalimitsevich@yandex.by>"]
readme = "README.md"
packages = [{ include = "test_freelance" }]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "*"
validators = "^0.20.0"
aioconsole = "^0.5.1"
coverage = "^6.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
